# LapackIK

./: CMakeLists.txt  main.cpp
cmake/: FindMKL.cmake
model/: InverseOperations.cpp  InverseOperations.h  Link.cpp  Link.h  PrismaticLink.cpp  PrismaticLink.h  RotationJoint.cpp  RotationJoint.h  Schunk.cpp  Schunk.h  Trajectory.cpp  Trajectory.h  operations.cpp  operations.h
